# validador_cpf_desafio_rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
